[gd_scene load_steps=10 format=3 uid="uid://bktrv3c2ka8jo"]

[ext_resource type="Script" path="res://Scripts/Scenes/gameplay.gd" id="1_2xrfu"]
[ext_resource type="PackedScene" uid="uid://btxnuk3n3ckek" path="res://Prefabs/Gameplay/Backdrops/stone.tscn" id="2_03s5a"]
[ext_resource type="AudioStream" uid="uid://bh5bw42xvfgwe" path="res://Assets/Music/GameplayTheme.mp3" id="2_yybwi"]
[ext_resource type="FontFile" uid="uid://yxygawtc05lh" path="res://Assets/FontFiles/Montserrat/Montserrat-SemiBold.ttf" id="3_u0we0"]
[ext_resource type="FontFile" uid="uid://ckd00l7rafrhj" path="res://Assets/FontFiles/Montserrat/Montserrat-MediumItalic.ttf" id="4_qobei"]
[ext_resource type="FontFile" uid="uid://di4abqxuqvl4h" path="res://Assets/FontFiles/Montserrat/Montserrat-ExtraBold.ttf" id="5_v5est"]
[ext_resource type="PackedScene" uid="uid://bj4f8aeon2n2d" path="res://Prefabs/Gameplay/Backdrops/mountain.tscn" id="6_cu355"]
[ext_resource type="PackedScene" uid="uid://bkcadb84hemvn" path="res://Prefabs/Gameplay/Backdrops/frog.tscn" id="6_t7kfm"]
[ext_resource type="PackedScene" uid="uid://blorkgnsg3tj2" path="res://Prefabs/Gameplay/Backdrops/bush.tscn" id="7_yt606"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_2xrfu")

[node name="Backframe" type="ColorRect" parent="."]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00123104
color = Color(0.355914, 0.524489, 0.189138, 1)

[node name="BackdropsLayer" type="Node2D" parent="."]

[node name="EnemiesLayer" type="Node2D" parent="."]

[node name="PlayerLayer" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yybwi")
autoplay = true
parameters/looping = true

[node name="InstructionsLayer" type="Node2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="InstructionsLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -562.0
offset_top = 132.0
offset_right = 562.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_u0we0")
theme_override_fonts/italics_font = ExtResource("4_qobei")
theme_override_fonts/bold_font = ExtResource("5_v5est")
theme_override_font_sizes/italics_font_size = 80
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 80
bbcode_enabled = true
text = "[center][i]Find[/i] [b]PINK[/b] [i]block![/i]
[i]Move with[/i] WASD
[i]Revealing Halo with[/i] H[/center]"

[node name="Timers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemySpawnWait" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="GameOverWait" type="Timer" parent="Timers"]

[node name="OverLayer" type="Node2D" parent="."]

[node name="Bush" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-633, -294)

[node name="Bush7" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-904, -532)

[node name="Bush8" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-878, -427)

[node name="Bush9" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-750, -463)

[node name="Bush2" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(573, 130)

[node name="Bush3" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-574, 532)

[node name="Bush4" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(522, -429)

[node name="Bush5" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(479, -382)

[node name="Bush6" parent="OverLayer" instance=ExtResource("7_yt606")]
position = Vector2(-444, -36)

[node name="Mountain" parent="OverLayer" instance=ExtResource("6_cu355")]
position = Vector2(574, -318)

[node name="Mountain2" parent="OverLayer" instance=ExtResource("6_cu355")]
position = Vector2(772, -522)

[node name="Frog" parent="OverLayer" instance=ExtResource("6_t7kfm")]
position = Vector2(-126, -11)

[node name="Frog2" parent="OverLayer" instance=ExtResource("6_t7kfm")]
position = Vector2(137, -11)

[node name="Frog3" parent="OverLayer" instance=ExtResource("6_t7kfm")]
position = Vector2(-2, 87)

[node name="Frog4" parent="OverLayer" instance=ExtResource("6_t7kfm")]
position = Vector2(2, -102)

[node name="Stone" parent="OverLayer" instance=ExtResource("2_03s5a")]
position = Vector2(298, 39)

[connection signal="timeout" from="Timers/EnemySpawnWait" to="." method="_on_enemy_spawn_wait_timeout"]
[connection signal="timeout" from="Timers/GameOverWait" to="." method="_on_game_over_wait_timeout"]
